[package]
name = "mob_cli"
version = "0.1.2"
authors = ["Michael Stock <mikeastock@gmail.com>"]
license = "MIT"
description = "A CLI for mobbing from the comfort of your console"
documentation = "https://github.com/mob-rs/mob"
homepage = "https://github.com/mob-rs/mob"
repository = "https://github.com/mob-rs/mob"

[dependencies]
clap = "2.23"
mob_server = { path = "../mob_server" }
rand = "0.3"
termion = "1.3"
