[package]
name = "mob_server"
version = "0.1.0"
authors = ["Michael Stock <mikeastock@gmail.com>"]
license = "MIT"
description = "A CLI for mobbing from the comfort of your console"
documentation = "https://github.com/mob-rs/mob"
homepage = "https://github.com/mob-rs/mob"
repository = "https://github.com/mob-rs/mob"

[dependencies]
diesel = { version = "0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "0.12.0", features = ["sqlite"] }
dotenv = "0.8"
rocket = "0.2.6"
rocket_codegen = "0.2.6"

[dev-dependencies]
rocket = { version = "0.2.6", features = ["testing"] }
