[package]
name = "mob_server"
version = "0.1.0"
authors = ["Michael Stock <mikeastock@gmail.com>"]
license = "MIT"
description = "A CLI for mobbing from the comfort of your console"
documentation = "https://github.com/mob-rs/mob"
homepage = "https://github.com/mob-rs/mob"
repository = "https://github.com/mob-rs/mob"

[dependencies]
diesel = { version = "0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "0.12.0", features = ["sqlite"] }
dotenv = "0.8"
r2d2 = "0.7"
r2d2-diesel = "0.12"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3"
