[package]
name = "mob_server"
version = "0.4.0"
authors = ["Michael Stock <mikeastock@gmail.com>"]
license = "MIT"
description = "A CLI for mobbing from the comfort of your console"
documentation = "https://github.com/mob-rs/mob"
homepage = "https://github.com/mob-rs/mob"
repository = "https://github.com/mob-rs/mob"

[[bin]]
name = "main"
doc = false
path = "src/main.rs"

[dependencies]
diesel = { version = "0.12.0", features = ["postgres"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.10"
error-chain = "0.11.0-rc.2"
r2d2 = "0.7"
r2d2-diesel = "0.12"
rocket = "0.3.1"
rocket_codegen = "0.3.1"
rocket_contrib = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
uuid = { version = "0.5", features = ["v4"] }
